# ikea_product_checker

./: .gitignore  config.toml  pyproject.toml
ikea_product_checker/: app.py
tests/: test_ikea_product_checker.py
